Fix alignment for keywords in articles

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -46,7 +46,7 @@ h1, h2, h3, h4, h5, h6 {
 
 code {
     display: inline-block;
-    vertical-align: middle;
+    vertical-align: baseline;
     color: $brandColor1;
     background-color: $brandColor3;
     font-size: 85%;
